Adjusted Hero section, fixed background image to scale properly on IOS devices

--- a/assets/css/2-base/_base.sass
+++ b/assets/css/2-base/_base.sass
@@ -88,18 +88,38 @@ body
   ------------------------------------	*/
 body
   // background: $documentBackgroundColor
-  background:
-    attachment: fixed
-    size: cover
-    position: center center
-    image: url(../img/#{$logo-path}), url(../img/#{$hero-path})
+  width: 100%
+  height: 100%
   font-size: 18px
   line-height: 1.6
   font-family: 'Articulat-CF' light
   color: $textColor
-  margin-bottom: 250px
-  -webkit-font-smoothing: antialiased
-  -webkit-text-size-adjust: 100%
+
+body:after
+  content: ""
+  position: fixed
+  top: 0
+  height: 100vh
+  left: 0
+  right: 0
+  z-index: -5
+  background: 
+    image: url(../img/#{$logo-path}), url(../img/#{$hero-path})
+    -webkit-background-size: cover
+    size: cover
+  
+
+  // .background-image
+  //   background:
+  //     attachment: fixed
+  //     size: cover
+  //     position: center center
+  //     width: 100%
+  //     height: 100%
+  //     image: url(../img/#{$logo-path}), url(../img/#{$hero-path})
+  //     margin-bottom: 250px
+  //     -webkit-font-smoothing: antialiased
+  //     -webkit-text-size-adjust: 100%
 
 svg
   +size(100%)
