--- a/assets/css/3-sections/_featured.sass
+++ b/assets/css/3-sections/_featured.sass
@@ -61,7 +61,6 @@
     height: 500px
     margin: 0px auto
     display: flex
-    overflow: auto
     justify-content: right
 
     img
