--- a/assets/css/3-sections/_header.sass
+++ b/assets/css/3-sections/_header.sass
@@ -71,6 +71,7 @@ header
     margin: 50px auto 0px
     display: flex
     justify-content: space-evenly
+    background: radial-gradient(white, transparent)
     
 
   .headline-copy
